# activity-registry

./: .gitignore  CMakeLists.txt
include/core/: Activity.h  Observer.h  Registry.h
include/gui/: ActivityWindow.h
src/: main.cpp
src/core/: Activity.cpp  Registry.cpp
src/gui/: ActivityWindow.cpp
tests/: test_main.cpp
tests/core/: test_Activity.cpp  test_Registry.cpp
